# cryptsetup-gui

./: .gitignore  CMakeLists.txt  README.md  configure.ac  cryptsetup-gui-9999.ebuild
src/: Makefile.am  cryptsetup-gui-gtk.c  cryptsetup-gui.c
